[gd_scene load_steps=7 format=3 uid="uid://csicyeuuaee83"]

[ext_resource type="PackedScene" uid="uid://bqsj2yytmrvb0" path="res://scene/enemy/Enemy_Parent.tscn" id="1_jsb24"]
[ext_resource type="Script" path="res://scene/enemy/Enemy_Ranged.gd" id="2_b3hhx"]
[ext_resource type="Texture2D" uid="uid://bubqhu0hrg5j3" path="res://charaTBD - Copy.png" id="3_o628x"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0ethq"]
radius = 15.7143

[sub_resource type="CircleShape2D" id="CircleShape2D_bmrw2"]
radius = 282.064

[sub_resource type="CircleShape2D" id="CircleShape2D_kmc3f"]
radius = 136.004

[node name="Enemy_Ranged" instance=ExtResource("1_jsb24")]
script = ExtResource("2_b3hhx")
enemy_type = "Night"
health = 100.0
speed = 50.0
speed_when_attacking = 25.0

[node name="Sprite2D" parent="." index="0"]
texture = ExtResource("3_o628x")

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource("CircleShape2D_0ethq")

[node name="AttackCooldown" parent="." index="5"]
wait_time = 1.5

[node name="PathfindingArea" parent="." index="10"]
visible = false

[node name="CollisionShape2D" parent="PathfindingArea" index="0"]
shape = SubResource("CircleShape2D_bmrw2")

[node name="AttackArea" parent="." index="11"]
visible = false

[node name="CollisionShape2D" parent="AttackArea" index="0"]
shape = SubResource("CircleShape2D_kmc3f")

[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
